crates/aura-macros/tests/boundaries/capability_family_duplicate_local_name.rs
use aura_macros::capability_family;

#[capability_family(namespace = "chat")]
enum ChatCapability {
    #[capability("message:send")]
    SendMessage,
    #[capability("message:send")]
    SendMessageAgain,
}

fn main() {}
